k8s/converter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: converter-service
spec:
  type: LoadBalancer
  selector:
    app: converter
  ports:
  - port: 8080
    targetPort: 8080
