k8s/converter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: converter.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: converter-service
            port:
              number: 8080
